latest main version changes
- translated some new things

--- a/Translations/German/text-effectUnit-change.xml
+++ b/Translations/German/text-effectUnit-change.xml
@@ -223,8 +223,8 @@
 		<Translation>Verkrüppelt</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EFFECTUNIT_VALOR</zType>
-		<Translation>Heldenmut</Translation>
+		<zType>TEXT_EFFECTUNIT_SOLDIER</zType>
+		<Translation>Soldat</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTUNIT_INGENUITY</zType>
