--- a/Translations/German/text-effectCity-change.xml
+++ b/Translations/German/text-effectCity-change.xml
@@ -60,42 +60,82 @@
 		<Translation>Landowner Honey</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EFFECTCITY_LUXURY_CHAMPIONS_WINE	</zType>
+		<zType>TEXT_EFFECTCITY_LUXURY_LANDOWNERS_OLIVE</zType>
+		<Translation>Landowner Olive</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_EFFECTCITY_LUXURY_CHAMPIONS_WINE</zType>
 		<Translation>Champion Wine</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_EFFECTCITY_LUXURY_CHAMPIONS_DYE</zType>
+		<Translation>Champion Dye</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_STATESMEN_PEARL</zType>
 		<Translation>Statesmen Pearls</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_EFFECTCITY_LUXURY_STATESMEN_WINE</zType>
+		<Translation>Statesmen Wine</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_PATRONS_GEM</zType>
 		<Translation>Patrons Gems</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_EFFECTCITY_LUXURY_PATRONS_INCENSE</zType>
+		<Translation>Patrons Incense</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_CLERICS_INCENSE</zType>
 		<Translation>Clerics Incense</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_EFFECTCITY_LUXURY_CLERICS_LAVENDER</zType>
+		<Translation>Clerics Lavender</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_SAGES_LAVENDER</zType>
 		<Translation>Sages Lavender</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_EFFECTCITY_LUXURY_SAGES_SALT</zType>
+		<Translation>Sages Salt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_TRADERS_OLIVE</zType>
 		<Translation>Traders Olives</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_EFFECTCITY_LUXURY_TRADERS_PEARL</zType>
+		<Translation>Traders Pearl</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_ARTISANS_DYE</zType>
 		<Translation>Artisans Dye</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_EFFECTCITY_LUXURY_ARTISANS_GEM</zType>
+		<Translation>Artisans Gem</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_RIDERS_SALT</zType>
 		<Translation>Riders Salt</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_EFFECTCITY_LUXURY_RIDERS_FUR</zType>
+		<Translation>Riders Fur</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_HUNTERS_FUR</zType>
 		<Translation>Hunters Fur</Translation>
 	</Entry>
-	<Entry>	
+	<Entry>
+		<zType>TEXT_EFFECTCITY_LUXURY_HUNTERS_HONEY</zType>
+		<Translation>Hunters Honey</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_EFFECTCITY_FAMILYCLASS_STATESMEN_SEAT_DECREE</zType>
 		<Translation>Erlass</Translation>
 	</Entry>
@@ -584,10 +624,6 @@
 		<Translation>Ältesten-Spezialist</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EFFECTCITY_TRAIT_JUDGE_ARCHETYPE_ALL</zType>
-		<Translation>Anführer der Redner</Translation>
-	</Entry>
-	<Entry>
 		<zType>TEXT_EFFECTCITY_TRAIT_ORATOR_ARCHETYPE_ALL</zType>
 		<Translation>Anführer der Richter</Translation>
 	</Entry>
@@ -686,10 +722,6 @@
 	<Entry>
 		<zType>TEXT_EFFECTCITY_TRAIT_DRILLMASTER</zType>
 		<Translation>Drillmaster Anführer</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTCITY_TRAIT_KEEN</zType>
-		<Translation>Begeisteter Anführer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_TRAIT_EQUESTRIAN</zType>
